--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hugeicons/react": "^1.1.1",
     "@prisma/client": "^6.18.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
